<resources>
    <!-- 全局文字 -->
    <string name="app_name">会议室预订系统</string>
    <string name="app_name_new">MRBS</string>
    <string name="app_version">v1.0</string>
    <!-- 界面文字 -->
    <string name="login_register_link">没有帐号？</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_label_password">密码</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_label_username">账号</string>
    <string name="meeting_room_list">会议室列表</string>
    <string name="login_remember">记住密码</string>
    <string name="edit_submit">保存</string>
    <string name="login_register">注册</string>
    <string name="register_username">请输入用户名 - 6到25位 -注册必要项</string>
    <string name="register_userpass">请输入密码 - 6到22位 -注册必要项</string>
    <string name="register_phone">请输入手机号 - 11位 -注册必要项</string>
    <string name="register_email">请输入E-mail</string>
    <string name="register_phone_t">手机号 </string>
    <string name="register_email_t">E-mail</string>
    <string name="app_name_register">会议室预订系统注册界面</string>
    <string name="note_search">查看详情</string>

    <!-- 提示文字 -->
    <string name="msg_loginfail">登录失败</string>
    <!-- 按钮文字 -->
    <string name="btn_confirm">确 认</string>
    <string name="btn_cancel">取 消</string>
    <!-- 菜单文字 -->
    <string name="menu_app_logout">注销账户</string>
    <string name="menu_app_about">应用信息</string>
    <!-- 配置提示 -->
    <string name="config_sign">修改签名</string>
    <string name="config_face">更换头像</string>
    <!-- Http Test -->
    <string name="get">访问页面</string>
    <string name="login">登录系统</string>
    <string name="name">用户名</string>
    <string name="pass">密   码</string>
    <!-- Dialog -->
    <string name="title_alert">消息</string>
    <!-- 用户信息 -->
    <string name="info_info">用户信息</string>
    <string name="info_sign">用户签名</string>
    <string name="info_username">用户名</string>
    <string name="info_userpass">密码</string>
    <string name="info_phone">手机号</string>
    <string name="info_email">E-mail</string>
    <!-- 预约界面 -->
    <string name="app_name_book">会议室预订系统预约界面</string>
    <string name="book_username">用户名</string>
    <string name="book_phone">用户手机号</string>
    <string name="book_room">预约会议室</string>
    <string name="book_time">预约时间</string>
    <string name="book_email">E-mail</string>
    <string name="book_note">会议内容</string>
    <string name="book_username_edit">您的用户名</string>
    <string name="book_phone_edit">您的手机号</string>
    <string name="book_room_edit">您要预约的会议室</string>
    <string name="book_time_edit">点击左侧按钮设置预约时间</string>
    <string name="book_email_edit">可输入您的E-mail 方便通知</string>
    <string name="book_note_edit">
        1、这里可以填入您的会议内容 便于管理员审核
        2、这里可以填入您的会议内容 便于管理员审核
        3、这里可以填入您的会议内容 便于管理员审核
        4、这里可以填入您的会议内容 便于管理员审核
        5、这里可以填入您的会议内容 便于管理员审核
        6、这里可以填入您的会议内容 便于管理员审核
    </string>
</resources>
