<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:gravity="center"
        android:text="@string/title_alert"
        android:visibility="visible" />

    <TextView
        android:id="@+id/cs_main_dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="test"
        android:textColor="#6200ff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/positiveButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_confirm" />

        <Button
            android:id="@+id/negativeButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:gravity="center"
            android:text="@string/btn_cancel" />
    </LinearLayout>
</LinearLayout>